Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113473

[REG 6.4.1->6.5.0] Assigning undefined to gadget qreal property doesn't reset

XMLWordPrintable

    • 13fc038d8 (dev), 2baf9ecb2 (6.5)

      On a Q_GADGET with a qreal property, like:

      class TestType
      {
          Q_GADGET
          Q_PROPERTY(qreal value READ value WRITE setValue RESET resetValue)
      

      This assignment:

      test.value = undefined
      

      Calls setValue(NAN) in 6.5.0 instead of resetValue() as it did in 6.4.1 and earlier.

      This still works as expected (calling resetValue()) for Q_OBJECT properties or for int properties of a Q_GADGET.

       

        For Gerrit Dashboard: QTBUG-113473
        # Subject Branch Project Status CR V

            fabiankosmale Fabian Kosmale
            special John Brooks
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes