tests/auto/qml/qqmlecmascript/data/resetGadget.qml
@@ -1,0 +1,9 @@
+import Qt.test
+
+ResettableGadgetHolder {
+    id: root
+    property bool trigger: false
+    onTriggerChanged: {
+        root.g.value = undefined
+    }
+}
